Fixed responsiveness on the sidebar

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -22,14 +22,23 @@
   <body class="hold-transition skin-black sidebar-mini">
     <div class="wrapper">
 
-      <!-- Main Header -->
-      <header id="terrama-header" class="main-header">
-        <!-- Logo -->
-        <a href="#" class="logo">
-          <!-- mini logo for sidebar mini 50x50 pixels -->
-          <div class="logo-lg"><img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square"><b>  TerraMA²</b></div>
-          <!-- logo for regular state and mobile devices -->
-          <div class="logo-mini"><img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square"></div>
+      <header id="main-header" class="main-header navbar navbar-static-top shadow" role="navigation">
+
+        <div class="header-logo">
+          <!-- Header Navbar: style can be found in header.less -->
+          <!-- Sidebar toggle button-->
+          <a class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton"></a>
+          <!-- Logo -->
+          <a href="#" class="logo">
+              <!-- mini logo for sidebar mini 50x50 pixels -->
+              <div class="logo-lg"><img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square"><b>  TerraMA²</b></div>
+              <!-- logo for regular state and mobile devices -->
+          </a>
+        </div>
+        <a id="logo-mini" href="#" class="logo" style="display: none;position: absolute">
+            <!-- mini logo for sidebar mini 50x50 pixels -->
+            <div class="logo-mini"><img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square"></div>
+            <!-- logo for regular state and mobile devices -->
         </a>
       </header>
       <aside class="main-sidebar">
@@ -230,7 +239,7 @@
                   </i>
                 </button>
               </div>
-              <div id="toggleButton" class="map-tool-button sidebar-toggle" full_screen="true" data-toggle="offcanvas" role="button"><button type="button"><i class="fa fa-arrows-alt"></i></button></div>
+              <div id="toggleButton" class="map-tool-button sidebar-toggle" full_screen="true" role="button"><button type="button"><i class="fa fa-arrows-alt"></i></button></div>
               <div id="moveMap" class="map-tool-button mouse-function-btn active"><button type="button"><i class="fa fa-hand-rock-o"></i></button></div>
               <div id="dragbox" class="map-tool-button mouse-function-btn"><button type="button"><i class="glyphicon glyphicon-zoom-in"></i></button></div>
               <div id="legendsButton" class="map-tool-button mouse-function-btn"><button type="button"><i class="fa fa-list"></i></button></div>
