--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="{[ BASE_URL ]}favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="manifest.json">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-status-bar-style" content="black">
+      <meta name="apple-mobile-web-app-title" content="PWAGram">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-57.png" sizes="57x57">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-60.png" sizes="60x60">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-72.png" sizes="72x72">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-76.png" sizes="76x76">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-114.png" sizes="114x114">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-120.png" sizes="120x120">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-144.png" sizes="144x144">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-152.png" sizes="152x152">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-180.png" sizes="180x180">
+      <link rel="apple-touch-icon" href="{[ BASE_URL ]}images/icons/iOS/Icon-256.png" sizes="256x256">
+      <meta name="msapplication-TileImage" content="{[ BASE_URL ]}images/icons/iOS/Icon-144.png">
+      <meta name="msapplication-TileColor" content="#222d32">
+      <meta name="theme-color" content="#222d32">
     <title>TerraMA² Monitor</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/bootstrap/dist/css/bootstrap.min.css">
