--- a/webcomponents/stylesheets/TerraMA2WebComponents.css
+++ b/webcomponents/stylesheets/TerraMA2WebComponents.css
@@ -5,7 +5,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 #terrama2-map .ol-zoom {
@@ -17,7 +17,7 @@
 #terrama2-map .ol-zoom:hover { background-color: rgba(255,255,255,.4) !important; }
 
 #terrama2-map .ol-zoom > button {
-  background-color: rgba(241, 241, 241, 0.8); !important;
+  background-color: rgba(241, 241, 241, 0.8) !important;
   color: rgb(84,84,84);
   outline: none;
 }
@@ -25,7 +25,7 @@
 #terrama2-map .ol-zoom > button:hover { background-color: rgba(241, 241, 241, 1) !important; }
 
 #terrama2-map .ol-attribution > button {
-  background-color: rgba(241, 241, 241, 0.8); !important;
+  background-color: rgba(241, 241, 241, 0.8) !important;
   color: rgb(84,84,84);
   outline: none;
 }
