Changed the layout to fit better on mobiles devices

--- a/webapp/views/index.html
+++ b/webapp/views/index.html
@@ -1,13 +1,7 @@
-{% extends "base/layout.html" %}
+<!-- {% extends "base/layout.html" %}
 
 {% block title %} TerraMA2 {% endblock %}
 
 {% block content %}
 
-<div class="col-md-12">
-    <div class="col-md-12">
-
-    </div> <!-- end col md 6 -->
-</div> <!-- end col md 12 -->
-
-{% endblock %}
+{% endblock %} -->
