--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -282,9 +282,6 @@ img[src=""] {
   #map-tools {
       display: inline-block;
   }
-  .sidebar-toggle {
-      display: none
-  }
 }
 
 #addLayers, #wmsUri {
@@ -983,8 +980,8 @@ img[src=""] {
 .header-logo {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center
+  /* align-items: center;
+  justify-content: center */
 }
 
 .main-header.navbar {
@@ -1031,12 +1028,12 @@ img[src=""] {
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px transparent; 
   border-radius: 10px;
 }
  
 ::-webkit-scrollbar-thumb {
-  background: #333; 
+  background: rgba(70, 70, 70, 0.3); 
   border-radius: 10px;
 }
 
