--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -261,7 +261,7 @@
                 <select class="form-control hidden"></select>
                 <button type="button"><i class="fa fa-info"></i></button>
               </div>
-              <!-- <div id="chartsButton" class="map-tool-button mouse-function-btn"><button type="button"><i class="fa fa-line-chart"></i></button></div> -->
+              <div id="chartsButton" class="map-tool-button mouse-function-btn"><button type="button"><i class="fa fa-line-chart"></i></button></div>
             </div>
             <div id="animate-tools" class="hidden">
               <div id="currentDate"><div><label></label></div></div>
