Review of map component to display Filtered Table preview

--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -18,6 +18,7 @@
   <!-- link for CSS when using the tree as an attribute -->
   <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/angular-tree-control/css/tree-control-attribute.css">
 
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}externals/openlayers/dist/ol.css">
   <style>
     .terrama2-tr {
       width: 100% !important;
@@ -104,6 +105,8 @@
   <script type="text/javascript" src="{[ BASE_URL ]}externals/angular-ui-router/release/angular-ui-router.min.js"></script>
 
   <script src="{[ BASE_URL ]}externals/angular-ui-select/dist/select.min.js"></script>
+
+  <script src="{[ BASE_URL ]}externals/openlayers/dist/ol.js"></script>
 
   <script type="text/javascript">
     var params = {
