fix update storager. TODO: handle moment time error

--- a/webapp/public/javascripts/angular/storager/templates/storage-component.html
+++ b/webapp/public/javascripts/angular/storager/templates/storage-component.html
@@ -241,7 +241,7 @@
 
     <terrama2-box title="i18n.__('Schedule')" css="css">
         <div class="col-md-12 terrama2-nopadding-box ng-scope">
-            <terrama2-schedule model="$ctrl.storage.schedule" options="scheduleOptions"></terrama2-schedule>
+            <terrama2-schedule model="$ctrl.storage.schedule" options="$ctrl.scheduleOptions"></terrama2-schedule>
         </div>
     </terrama2-box>
 
