Fix storage update and GUI minor fixes

--- a/webapp/public/javascripts/angular/storager/templates/storage-component.html
+++ b/webapp/public/javascripts/angular/storager/templates/storage-component.html
@@ -3,7 +3,7 @@
         <i class="fa fa-refresh fa-spin" style="position: fixed !important;"></i>
     </div>
 
-    <terrama2-alert-box2 handler="$ctrl.MessageBox.alertBox" close="$ctrl.close()"></terrama2-alert-box2>
+    <terrama2-alert-box2 handler="$ctrl.MessageBox.alertBox" close="$ctrl.closeBox()"></terrama2-alert-box2>
     <terrama2-box title="i18n.__('General Data')" css="css">
       <div class="col-md-12 terrama2-nopadding-box ng-scope">
         <form name="$ctrl.storageForm">
