--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -6,7 +6,6 @@
 {% set MENU_URLS["static-data"] = {name: 'Static Data', url: "configuration/static/dataseries", icon: "fa-folder"} %}
 {% set MENU_URLS["analysis"] = {name: 'Analysis', url: "configuration/analysis", icon: "fa-search"} %}
 {% set MENU_URLS["views"] = {name: 'Views', url: "configuration/views", icon: "fa-eye"} %}
-{% set MENU_URLS["storage"] = {name: 'Storage', url: "configuration/storages", icon: "fa-database"} %}
 {% set MENU_URLS["alerts"] = {name: 'Alerts', url: "configuration/alerts", icon: "fa-warning"} %}
 {% set MENU_URLS["status"] = {name: 'Status', url: "configuration/status", icon: "fa-minus-circle"} %}
 
@@ -191,7 +190,7 @@
               <i class="fa fa-angle-left pull-right"></i>
             </a>
             <ul class="treeview-menu"
-              style="display: {% if (tabActive === 'services' || tabActive === 'users') %} block; {% else %} none;{% endif %}">
+              style="display: {% if (tabActive === 'services' || tabActive === 'users' || tabActive === 'storage') %} block; {% else %} none;{% endif %}">
               <li class="treeview {% if (tabActive === 'services') %} active {% endif %}">
                 <a href="{[ BASE_URL ]}administration/services">
                   <i class="fa fa-cog"></i> <span ng-bind="i18n.__('Services')"></span>
@@ -200,6 +199,12 @@
               <li class="treeview {% if (tabActive === 'users') %} active {% endif %}">
                 <a href="{[ BASE_URL ]}administration/users">
                   <i class="fa fa-users"></i> <span ng-bind="i18n.__('Users')"></span>
+                </a>
+              </li>
+
+              <li class="treeview {% if (tabActive === 'storage') %} active {% endif %}">
+                <a href="{[ BASE_URL ]}administration/storages">
+                  <i class="fa fa-database"></i> <span ng-bind="i18n.__('Storage')"></span>
                 </a>
               </li>
             </ul>
