--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -243,12 +243,12 @@ body, html {
 
 /*}*/
 
-.terrama2-fluid {
-  position: fixed !important;
-  z-index: 1050 !important;
-  width: 100% !important;
-  top: 0 !important;
-  left: 0 !important;
+.sticky {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1050;
 }
 
 .terrama2-splash {
