Edit storage from status

--- a/webapp/views/administration/storages.html
+++ b/webapp/views/administration/storages.html
@@ -13,7 +13,7 @@
    }
  };
 
- var baseUrl = "{[ BASE_URL ]}configuration/storages/";
+ var baseUrl = "{[ BASE_URL ]}administration/storages/";
  var configuration = {
    message: "{[ message ]}",
    dataSeriesType: 'static',
