Melhorias no layout

--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -199,10 +199,27 @@
     </terrama2-box>
 
     <terrama2-box title="i18n.__('Style')" css="ctrl.css">
-      <form name="forms.styleForm" novalidate>
-        <!-- Vectorial -->
-        <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" is-dynamic="ctrl.isDynamic" is-updating="ctrl.isUpdating" columns-list="ctrl.columnsList" postgis-data="ctrl.postgisData" model="ctrl.legend"></terrama2-style-legend>
-      </form>
+      <div class="nav-tabs-custom">
+      <ul class="nav nav-tabs">
+        <li class="active"><a href="#tabMap" data-toggle="tab" aria-expanded="true">{{ i18n.__('Map') }}</a></li>
+        <li><a href="#tabChart" data-toggle="tab" aria-expanded="false" style="display: none;">{{ i18n.__('Chart') }}</a></li>
+      </ul>
+      <div class="tab-content">
+        <div class="tab-pane active" id="tabMap">
+          <form name="forms.styleForm" novalidate>
+            <!-- Vectorial -->
+            <terrama2-style-legend form-ctrl="forms.styleForm" type="ctrl.targetDataSeriesType" is-dynamic="ctrl.isDynamic" is-updating="ctrl.isUpdating" columns-list="ctrl.columnsList" postgis-data="ctrl.postgisData" model="ctrl.legend"></terrama2-style-legend>
+          </form>
+          <div style="clear: both;"></div>
+        </div>
+        <div class="tab-pane" id="tabChart" style="display: none;">
+          <form name="forms.chartForm">
+            <chart ng-if="ctrl.isViewDataSeriesNull()" chart-form="forms.chartForm" table-name="ctrl.viewDataSeries.dataSets[0].format.table_name" model="ctrl.view.charts" provider="ctrl.viewDataSeries.data_provider_id"></chart>
+          </form>
+          <div style="clear: both;"></div>
+        </div>
+      </div>
+    </div>
     </terrama2-box>
 
     <div class="box-footer">
