--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -69,7 +69,7 @@
                 <a href="#"><img src="{[ BASE_URL ]}images/terrama2_logo.png"></a>
             </div><!-- /.login-logo -->
             <div class="login-box-body">
-                <div class="login-box-msg d-flex flex-row justify-content-between">
+                <div class="login-box-msg">
                     <span></span>
                     <span ng-bind="i18n.__('Sign in to start your session')"></span>
                     <terrama2-countries-list language="{{ '{[ userLocale ]}' || 'us' }}"></terrama2-countries-list>
