Remoção do componente de gráficos

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -50,7 +50,7 @@
           <div id="main-header" class="main-header" role="navigation">
             <div class="header-logo">
               <a class="logo-container" href="{[ BASE_URL ]}">
-                <img src="{[ BASE_URL ]}images/terrama2_logo.png" class="img-square logo-img" alt="User Image">
+                <img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square logo-img" alt="User Image">
                 <span class="logo-text">TerraMA²</span>
               </a>
               <a class="sidebar-toggle" data-toggle="offcanvas" role="button" id="collapseButton"></a>
