Fix reprocessing execution date: UTC

--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -67,6 +67,7 @@
 
 <!-- Moment Datetime JS -->
 <script type="text/javascript" src="{[ BASE_URL ]}externals/moment/moment.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}externals/moment-timezone/builds/moment-timezone-with-data.js"></script>
 <!-- Angular tree control -->
 <script type="text/javascript" src="{[ BASE_URL ]}externals/angular-tree-control/angular-tree-control.js"></script>
 <!-- Ace editor -->
